@@ -1,4 +1,4 @@
-/*  Copyright (C) 2003-2011 JabRef contributors.
+/*  Copyright (C) 2003-2014 JabRef contributors.
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation; either version 2 of the License, or
@@ -67,7 +67,7 @@ public class BibtexString {
         }
 
         public static final Type get(String name) {
-        	if (name.length() == 0) {
+        	if (name.length() <= 1) {
         		return OTHER;
         	}
             if (!(name.charAt(1) + "").toUpperCase().equals(
